--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Assignment solution for module 2</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
 
+<body>
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<section class="chicken">
+				<h2>Chicken</h2>
+				<p>
+					Chicken is the most common type of poultry in the world. Owing to the relative ease and low cost of raising them in comparison to animals such as cattle or hogs, chickens have become prevalent throughout the cuisine of cultures around the world, and their meat has been variously adapted to regional tastes. 
+				</p>
+			</section>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<section class="beef">
+				<h2>Beef</h2>
+				<p>
+					Beef is the culinary name for meat from cattle, particularly skeletal muscle. Humans have been eating beef since prehistoric times. Beef is a source of high-quality protein and nutrients.
+				</p>
+			</section>
+		</div>
+		<div class="col-lg-4 col-md-6 col-sm-12">
+			<section class="mushroom">
+				<h2>Mushroom</h2>
+				<p>
+					A mushroom or toadstool is the fleshy, spore-bearing fruiting body of a fungus, typically produced above ground, on soil, or on its food source.
+				</p>
+			</section>
+		</div>
+	</div>
+</body>
+</html>
